[package]
name = "code_generator"
version = "0.1.0"
edition = "2024"


[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.100"
codegen = "0.2.0"
heck = "0.5.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
num-to-words = "0.1.1"
numerics = "0.0.1"
quote = "1.0.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
serde_repr = "0.1.20"
serde_with = "3.15.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = "2.0.111"
